[package]
name = "green_moon_2d"
version = "0.1.0"
authors = ["Willi Kappler <grandor@gmx.de>"]
license = "MIT"
repository = "https://github.com/willi-kappler/green_moon_2d"
description = "2D game engine"
readme = "README.md"
exclude = ["target"]
keywords = ["2d", "Game", "Engine"]
categories = ["Game"]
edition = "2018"

[dependencies]
thiserror = "1.0"
macroquad = "0.3.4"
#fnv = "1.0.3"

[profile.release]
lto = true
