[package]
name = "particle1"
version = "0.1.0"
authors = ["Willi Kappler <grandor@gmx.de>"]
license = "MIT"
repository = "https://github.com/willi-kappler/green_moon_2d"
description = "2D game engine"
readme = "README.md"
exclude = ["target"]
keywords = ["2d", "Game", "Engine"]
categories = ["Game"]
edition = "2021"

[dependencies]
log = "0.4"
simplelog = "0.11.2"
green_moon_2d = { path = "../../", version = "0.1.0" }

[profile.release]
lto = true
